issued fixed in mongo and neo4j endpoints
