# src/routes/mongoRoutes/swagger/mongoSwaggerBookRouter.yaml
@@ -1,44 +1,29 @@
 openapi: 3.0.0
 info:
-  title: Your Book API
+  title: Book API
   version: 1.0.0
 paths:
   /mongo/books:
     get:
-      summary: Get all books
       tags:
-        - Books
+        - Book
+      summary: Get all books
       responses:
         '200':
           description: Successful response
           content:
             application/json:
-              example:
-                - title: Book 1
-                  picture: Picture URL 1
-                  summary: Summary 1
-                  pages: 100
-                  amount: 50
-                  available_amount: 10
-                - title: Book 2
-                  picture: Picture URL 2
-                  summary: Summary 2
-                  pages: 150
-                  amount: 30
-                  available_amount: 5
-    x-swagger-router-controller: YourControllerName
-    operationId: getAllBooks
-
+              example: []
   /mongo/books/{id}:
     get:
-      summary: Get a book by ID
       tags:
-        - Books
+        - Book
+      summary: Get book by ID
       parameters:
         - name: id
           in: path
-          description: Book ID
           required: true
+          description: Book ID
           schema:
             type: string
       responses:
@@ -46,65 +31,63 @@ paths:
           description: Successful response
           content:
             application/json:
-              example:
-                title: Book 1
-                picture: Picture URL 1
-                summary: Summary 1
-                pages: 100
-                amount: 50
-                available_amount: 10
-    x-swagger-router-controller: YourControllerName
-    operationId: getBookById
-
+              example: {}
+        '500':
+          description: Internal Server Error
   /mongo/book/create:
     post:
-      summary: Create a new book
       tags:
-        - Books
-      consumes:
-        - multipart/form-data
-      parameters:
-        - in: formData
-          name: upfile
-          type: file
-          description: The file to upload.
+        - Book
+      summary: Create a new book
       requestBody:
+        description: Book data
         required: true
         content:
           application/json:
-            schema:
-              type: object
-              properties:
-                title:
-                  type: string
-                picture:
-                  type: string
-                summary:
-                  type: string
-                pages:
-                  type: integer
-                mount:
-                  type: integer
-                available_amount:
-                  type: integer
-              required:
-                - title
-                - picture
-                - summary
-                - pages
-                - mount
-                - available_amount
+            example:
+              title: "Sample Book"
+              picture: "sample.jpg"
+              summary: "A sample book description."
+              pages: 200
+              mount: 10
+              available_amount: 10
       responses:
         '200':
-          description: Successful response
+          description: Book created successfully
           content:
             application/json:
-              example:
-                title: New Book
-                picture: Root to my picture
-                summary: This is my summary of my book
-                pages: 1212
-                amount: 50
-                available_amount: 3
-    x-swagger-router-controller: YourControllerName
-    operationId: createBook
+              example: {}
+        '500':
+          description: Internal Server Error
+  /mongo/book/update/{id}:
+    post:
+      tags:
+        - Book
+      summary: Update book by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Book ID
+          schema:
+            type: string
+      requestBody:
+        description: Updated book data
+        required: true
+        content:
+          application/json:
+            example:
+              title: "Updated Book"
+              picture: "updated.jpg"
+              summary: "An updated book description."
+              pages: 250
+              mount: 15
+              available_amount: 8
+      responses:
+        '200':
+          description: Book updated successfully
+          content:
+            application/json:
+              example: {}
+        '500':
+          description: Internal Server Error
